# IoT-Plug-and-Play-Workshop

./: .gitignore  README.md  _config.yml  style.scss  test.html
Deployment/: AppTest.json  CleanMap.sh  ConfigureTSI-Tracker.sh  ConfigureTSI.sh  ConfigureTSI.sh.old  CreateADTEventGrid.json  CreateADTEventGrid.json.old  CreateIndoorMap-Tracker.ps1  CreateIndoorMap.ps1  CreateIndoorMap.sh  CreateIndoorMapCO2-JapanDemo.sh  CreateIndoorMapCO2-JapanDemoV2.sh  CreateIndoorMapCO2-JapanDemoV3.sh  CreateIndoorMapCO2.sh  IoTPlugandPlayWorkshop-Functions.json  IoTPlugandPlayWorkshop-Tracker.json  IoTPlugandPlayWorkshop-WebApp.json  IoTPlugandPlayWorkshop.json  IoTPlugandPlayWorkshopDemo.json  IoTPlugandPlayWorkshopNested.json  IoTPlugandPlayWorkshopWithIndoorMap.json  Tracker.json  test.json  test1.json
_sass/: main.scss
assets/css/: site.theme  style.scss
css/: main.scss
demo/ADTClient/: SampleClientApp.deps.json  SampleClientApp.runtimeconfig.dev.json  appsettings.json
demo/ADTClient/Models/: Floor.json  Room.json  SpaceModel.json  Thermostat.json  ThermostatModel.json
demo/ADTGraph/: BuildingGraph.json  BuildingGraphDemo.json
demo/RasbperryPi4/C/: CMakeLists.txt  main.c
demo/RasbperryPi4/C/deviceInformation/: deviceInformation.c  deviceInformation.h
demo/RasbperryPi4/C/docs/: README.md
demo/RasbperryPi4/C/iothub/: d2c.c  d2c.h  deviceMethod.c  deviceTwin.c  dps.c  dps.h  iothub_op.c  iothub_op.h
demo/RasbperryPi4/C/script/: init_rp4.sh  initialize_rp.sh  run.sh
demo/RasbperryPi4/C/senseHat/: hts221.c  hts221.h  led.h  lsm9ds1.cpp  lsm9ds1.h  sensehat.h  util.c  util.h
demo/RasbperryPi4/model/: example_sensehat-1.json
demo/RasbperryPi4_C/: main.h
demo/RasbperryPi4_C/iothub/: c2d.c  c2d.h  callback.c  callback.h  deviceMethod.h  deviceTwin.h
demo/RasbperryPi4_C/script/: build.sh  initialize_rp.sh  run.sh  setup.sh
demo/RasbperryPi4_C/senseHat/: led.cpp  lps25h.c  lps25h.h  sensehat.c
demo/Seeed_Wio_Terminal/: platformio.ini  seeedkk-wioterminal-wioterminal_aziot_example.json
demo/Seeed_Wio_Terminal/docs/: README.md
demo/Seeed_Wio_Terminal/include/: config.h
demo/Seeed_Wio_Terminal/src/: CliMode.cpp  main.cpp
demo/Seeed_Wio_Terminal/uf2/: 0.6.uf2  0.8.GPS.uf2  0.9.uf2  NonPnP.uf2  PnP.uf2
demo/SimpleThermostat/: CMakeLists.txt  main.c  main.h
demo/SimpleThermostat/custom_hsm/: CMakeLists.txt  custom_hsm.c
demo/SimpleThermostat/docs/: README.md
demo/SimpleThermostat/iothub/: callback.c  callback.h  d2c.c  d2c.h  deviceMethod.c  deviceMethod.h  deviceTwin.c  deviceTwin.h  dps.c  dps.h  iothub_op.c  iothub_op.h
demo/SimpleThermostat/model/: Readme.txt  SimpleThermostat.json
demo/SimpleThermostat/script/: Readme.txt  build.sh  run.sh  setup.sh
docs/: ADT-IndoorMap.md  ADTClient.md  ADTExplorer.md  AzureDigitalTwins.md  ConnectSimulator.md  Deployment.md  DigitalSignature.md  IndoorMap.md  IoT-Device-Management.md  RegisterProviders.md  test2.html
jp/: readme.md
jp/docs/: Deployment.md
jp/hol/: certificate.md  readme.md
jp/hol/adt/: prep.md  readme.md
jp/hol/deployment/: readme.md
jp/hol/simulator/: readme.md
jp/hol/wioterminal/: readme.md  sample.md
jp/hol/wioterminal/uf2/: wioterminal-azureiot-example.uf2
jp/pptx/: 1208_iotpnp_timetable.pptx
